--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.115.12"
+fastapi = {extras = ["standard"], version = "^0.115.12"}
 transformers = "^4.51.3"
 uvicorn = {extras = ["standard"], version = "^0.34.2"}
 
