--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ python = "^3.11"
 fastapi = {extras = ["standard"], version = "^0.115.12"}
 transformers = "^4.51.3"
 uvicorn = {extras = ["standard"], version = "^0.34.2"}
+torch = "^2.7.0"
+torchvision = "^0.22.0"
+torchaudio = "^2.7.0"
+groq = "^0.25.0"
+pydantic-settings = "^2.9.1"
+python-dotenv = "^1.1.0"
+huggingface-hub = "^0.32.2"
 
 [build-system]
 requires = ["poetry-core"]
