--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-dotenv = "^1.1.0"
 huggingface-hub = "^0.32.2"
 soundfile = "^0.13.1"
 librosa = "^0.11.0"
+pydub = "^0.25.1"
 
 [build-system]
 requires = ["poetry-core"]
